test/scc_test/exp/semantic-errors/004.t
void test()
{
    int a;
    a->b;
}